--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,7 +23,7 @@
       <li class="name">
         <h1>
           <a href="index.html">
-            PYTS Home
+            PYTS Homes
           </a>
         </h1>
       </li>
