index.html -- Reverted back to separate login page instead of having the text form appear on this html page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>Papa Yannis' Thrift Shop</title>
+  <title>Papa Yannis's Thrift Shop</title>
   <meta name="Author" content="Allen Gong">
   <meta name="description" content="Best place to get your goodies">
   
@@ -57,7 +57,7 @@
  
       <h4>Who we are</h4>
  
-      <p>Papa Yannis' Thrift Shop: Your go-to place for unbeatable e-commerce deals.</p><hr>
+      <p>Papa Yannis's Thrift Shop: Your go-to place for unbeatable e-commerce deals.</p><hr>
     </div>
  
     <div class="large-9 columns">
@@ -66,10 +66,7 @@
         <div class="fill">
           <div class="panel">
             <h5>Returning User?</h5>
-            <form method="post" action="login.jsp">
-				Name: <input type="text" name="param_username">
-				<input type="submit" value="Log in" class="button">
-            </form><hr>
+            <p><a href="login.jsp" class="button">Log in!</a></p><br>
             <h5>New User?</h5>
             <p><a href="signUp.jsp" class="button">Sign up!</a></p>
           </div>
@@ -85,7 +82,7 @@
   <div class="large-12 columns"><hr />
       <div class="row">
         <div class="large-6 columns">
-            <p>&copy; Allen Gong, Dhruv, Jasmine Nguyen</p>
+            <p>&copy; Allen Gong, Dhruv Kaushal, Jasmine Nguyen</p>
         </div>
       </div>
   </div>
