--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="js/foundation.min.js"></script>
 </head>
 <body>
+
 	<!-- Navigation -->
  
   <nav class="top-bar" data-topbar>
@@ -66,9 +67,11 @@
         <div class="fill">
           <div class="panel">
             <h5>Returning User?</h5>
-            <p><a href="login.jsp" class="button">Log in!</a></p><br>
+              <p><a href="login.jsp" class="button">Log in!</a></p><br>
             <h5>New User?</h5>
-            <p><a href="signUp.jsp" class="button">Sign up!</a></p>
+              <p><a href="signUp.jsp" class="button">Sign up!</a></p><br>
+            <h5>Add Categories?</h5>
+              <p><a href="categories.jsp" class="button">Add categories</a></p>
           </div>
         </div>
       </div>
