miscellaneous small changes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -68,6 +68,8 @@
               <p><a href="login.jsp" class="button">Log in!</a></p><br>
             <h5>New User?</h5>
               <p><a href="signUp.jsp" class="button">Sign up!</a></p><br>
+            <h5>Just Want To Browse Our Products?</h5>
+              <p><a href="ProductBrowsing.jsp" class="button">Browse!</a></p>
           </div>
         </div>
       </div>
